First commited as before_103147_rev1